--- a/index.html
+++ b/index.html
@@ -24,11 +24,34 @@
         </section>
 
         <section class="container secundario">
-            <img src="img/Plataformas.png" alt="Um monitor e um celular com o Alura Plus aberto" class="secundario__imagem">
+            <img src="Plataformas.png" alt="Um monitor e um celular com o Alura Plus aberto" class="secundario__imagem">
             <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
-            <p class="descricao__titulo">Aproveita a tela grande da TV ou assista no Tablet, Laptop, Celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+            <p class="descricao__texto">Aproveita a tela grande da TV ou assista no Tablet, Laptop, Celular e outros aparelhos. 
+                Nossa seleção de cursos não para de crescer.</p>
         </div>
+        </section>
+
+        <section class="conteiner secundario ">
+            <div class="conteiner__descricao">
+                <p class="descricao__texto">
+                    Só o Combo+ oferece Alura Plus e Alura Língua juntos para você ter 
+                    acesso a cursos de diversas áreas de tecnologia e aprender ou espanhol onde e como quiser
+                </p>
+                    <a href="www.alura.com.br" class="container_botao botao">Assinar o Combo+</a>
+            </div>
+            <img src="Telas.png" alt="Tela da alura+ e do alura lingua" class="secundario__imagem2">
+        </section>
+
+        <section class="container secundario">
+            <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+                class="secundario__imagem">
+            <div class="container__descricao">
+                <h2 class="descricao__titulo">Baixe seus cursos</h2>
+                <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                    você, até mesmo sem internet.</p>
+            </div>
+        </section>
     </body>
     
 </html>
